--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1a1a1a, #2d0b52);
+      background: linear-gradient(135deg, #1a1a1a, #3a0ca3);
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -18,20 +18,22 @@
       height: 100vh;
       text-align: center;
       overflow: hidden;
+      position: relative;
     }
 
     img {
       width: 85%;
       max-width: 400px;
       border-radius: 20px;
-      box-shadow: 0 0 30px rgba(255, 192, 203, 0.5);
+      box-shadow: 0 0 30px rgba(255, 192, 203, 0.6);
       opacity: 0;
       animation: fadeIn 2s ease forwards;
     }
 
     h1 {
       margin-top: 20px;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
+      line-height: 1.4;
       opacity: 0;
       animation: fadeInText 3s ease 1s forwards;
     }
@@ -42,30 +44,45 @@
     }
 
     @keyframes fadeInText {
-      from { opacity: 0; transform: translateY(10px); }
+      from { opacity: 0; transform: translateY(15px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
+    /* Floating hearts */
     .heart {
       position: absolute;
-      bottom: 20px;
+      bottom: -10px;
+      font-size: 1.5rem;
       color: pink;
-      font-size: 2rem;
-      animation: float 3s ease-in-out infinite;
+      opacity: 0.8;
+      animation: floatUp 6s linear infinite;
     }
 
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+    @keyframes floatUp {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-100vh) scale(0.5); opacity: 0; }
     }
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/yourusername/love-page/main/photo.jpg" alt="Her Photo" />
+  <img src="https://raw.githubusercontent.com/amanraj65/puchu-puchu/961586c51fd44302ba54de9eed48a53c74b95753/WhatsApp%20Image%202025-10-27%20at%2012.33.10%20PM.jpeg" alt="Her Photo" />
   <h1>💖 You’re the reason my code runs without errors.</h1>
 
-  <div class="heart">💗</div>
+  <!-- Floating hearts animation -->
+  <script>
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.innerHTML = '💗';
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.animationDuration = 4 + Math.random() * 3 + 's';
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 7000);
+    }
+    setInterval(createHeart, 500);
+  </script>
 
+  <!-- Lo-fi background music -->
   <audio autoplay loop>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_0a8e51b36a.mp3?filename=chill-lofi-112191.mp3" type="audio/mp3">
   </audio>
