--- a/index.html
+++ b/index.html
@@ -1,114 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>A Little Surprise 🎁</title>
-<style>
-  *{box-sizing:border-box;}
-  body{
-    margin:0;
-    height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    background:#fff;
-    font-family:"Poppins",sans-serif;
-    overflow:hidden;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>For You 💖</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-  .gift-box{
-    position:relative;
-    width:120px;height:120px;
-    background:#ff477e;
-    border-radius:10px;
-    box-shadow:0 8px 25px rgba(0,0,0,0.2);
-    cursor:pointer;
-    transition:transform .3s;
-  }
-  .gift-box:hover{transform:scale(1.05);}
-  .lid{
-    position:absolute;top:-20px;left:0;
-    width:100%;height:30px;
-    background:#ff709d;border-radius:10px 10px 0 0;
-  }
-  .ribbon{
-    position:absolute;left:50%;top:0;transform:translateX(-50%);
-    width:15px;height:100%;background:#fff;
-  }
-  .message, .photo, .hearts{
-    position:absolute;top:0;left:0;width:100%;height:100%;
-    display:flex;align-items:center;justify-content:center;
-    flex-direction:column;
-  }
-  .message, .photo{opacity:0;transition:opacity 1s;}
-  .message h2{color:#333;margin:0;font-weight:600;text-align:center;}
-  .photo img{
-    width:85%;max-width:350px;border-radius:20px;
-    box-shadow:0 0 30px rgba(255,192,203,.6);
-  }
+    body {
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      overflow: hidden;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      flex-direction: column;
+      text-align: center;
+    }
 
-  .heart{
-    position:absolute;
-    color:pink;font-size:1.5rem;opacity:.8;
-    animation:floatUp 6s linear infinite;
-  }
-  @keyframes floatUp{
-    0%{transform:translateY(0) scale(1);opacity:1;}
-    100%{transform:translateY(-100vh) scale(.5);opacity:0;}
-  }
-</style>
+    .gift-box {
+      width: 140px;
+      height: 140px;
+      background: linear-gradient(135deg, #ff8fab, #ff4d6d);
+      border-radius: 25px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      color: white;
+      font-weight: 600;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      user-select: none;
+    }
+    .gift-box:active {
+      transform: scale(0.95);
+    }
+
+    .message {
+      display: none;
+      font-size: 20px;
+      color: #333;
+      margin-top: 20px;
+      line-height: 1.5;
+      opacity: 0;
+      animation: fadeIn 1.5s forwards;
+    }
+
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
+
+    .photo {
+      display: none;
+      margin-top: 25px;
+      width: 85%;
+      max-width: 300px;
+      border-radius: 20px;
+      opacity: 0;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+      animation: photoIn 2s forwards ease-in-out;
+    }
+
+    @keyframes photoIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1.03); }
+    }
+
+    .heart {
+      position: fixed;
+      font-size: 20px;
+      color: #ff6699;
+      animation: float 5s linear infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-250px) scale(1.6); opacity: 0; }
+    }
+  </style>
 </head>
 <body>
+  <div class="gift-box" id="gift">🎁 Tap Me</div>
+  <div class="message" id="message"></div>
+  <img src="https://raw.githubusercontent.com/amanraj65/puchu-puchu/961586c51fd44302ba54de9eed48a53c74b95753/WhatsApp%20Image%202025-10-27%20at%2012.33.10%20PM.jpeg" 
+       alt="Her Photo" class="photo" id="photo" />
+  
+  <audio id="bg-music" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_bcf91d1e46.mp3?filename=lofi-study-112191.mp3"></audio>
 
-<div class="gift-box" id="gift">
-  <div class="lid"></div>
-  <div class="ribbon"></div>
-</div>
+  <script>
+    const gift = document.getElementById('gift');
+    const message = document.getElementById('message');
+    const photo = document.getElementById('photo');
+    const music = document.getElementById('bg-music');
 
-<div class="message" id="msg">
-  <h2>💖 “You’re the reason my code runs without errors.”</h2>
-</div>
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.textContent = '💖';
+      heart.style.left = Math.random() * window.innerWidth + 'px';
+      heart.style.top = window.innerHeight + 'px';
+      heart.style.fontSize = (Math.random() * 15 + 15) + 'px';
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 5000);
+    }
 
-<div class="photo" id="photo">
-  <img src="YOUR_IMAGE_URL_HERE" alt="Gift Image">
-</div>
+    gift.addEventListener('click', () => {
+      gift.style.display = 'none';
+      document.body.style.background = '#fff0f6';
 
-<audio id="bgm" loop>
-  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_0a8e51b36a.mp3?filename=chill-lofi-112191.mp3" type="audio/mp3">
-</audio>
+      message.style.display = 'block';
+      message.innerHTML = '';
 
-<script>
-const gift = document.getElementById('gift');
-const msg  = document.getElementById('msg');
-const photo = document.getElementById('photo');
-const bgm = document.getElementById('bgm');
+      const text = '💖 “You’re the reason my code runs without errors.”';
+      let i = 0;
+      const typing = setInterval(() => {
+        message.innerHTML += text.charAt(i);
+        i++;
+        if (i === text.length) {
+          clearInterval(typing);
+          setTimeout(() => {
+            photo.style.display = 'block';
+          }, 800);
+        }
+      }, 60);
 
-gift.addEventListener('click',()=>{
-  gift.style.display='none';
-  msg.style.opacity=1;
-  bgm.play().catch(()=>{});   // start music if allowed
-  setTimeout(()=>{
-    msg.style.opacity=0;
-    setTimeout(()=>{
-      photo.style.opacity=1;
-      startHearts();
-    },1000);
-  },2500);
-});
+      music.play().catch(() => console.log("Autoplay blocked until click."));
 
-function startHearts(){
-  setInterval(()=>{
-    const heart=document.createElement('div');
-    heart.classList.add('heart');
-    heart.textContent='💗';
-    heart.style.left=Math.random()*100+'vw';
-    heart.style.animationDuration=(4+Math.random()*3)+'s';
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),7000);
-  },500);
-}
-</script>
-
+      setInterval(createHeart, 400);
+    });
+  </script>
 </body>
 </html>
