Update title and message text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For You 💖</title>
+  <title>For My Puchu 💖</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
@@ -116,7 +116,7 @@
       message.style.display = 'block';
       message.innerHTML = '';
 
-      const text = '💖 “You’re the reason my code runs without errors.”';
+      const text = '💖 “You’re the reason my Smile.”';
       let i = 0;
       const typing = setInterval(() => {
         message.innerHTML += text.charAt(i);
