--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       message.style.display = 'block';
       message.innerHTML = '';
 
-      const text = '💖 “You’re the reason my smile.”';
+      const text = '💖 “You’re the reason of my smile.”';
       let i = 0;
       const typing = setInterval(() => {
         message.innerHTML += text.charAt(i);
