Change heart emoji from 💖 to 😘

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     function createHeart() {
       const heart = document.createElement('div');
       heart.classList.add('heart');
-      heart.textContent = '💖';
+      heart.textContent = '😘';
       heart.style.left = Math.random() * window.innerWidth + 'px';
       heart.style.top = window.innerHeight + 'px';
       heart.style.fontSize = (Math.random() * 15 + 15) + 'px';
